<resources>
    <string name="application_name" translatable="false">Infinity</string>
    <string name="login_activity_label">Login</string>
    <string name="search_activity_label" translatable="false"> </string>
    <string name="comment_activity_label">Send Comment</string>
    <string name="comment_activity_label_is_replying">Reply</string>
    <string name="post_text_activity_label">Text Post</string>
    <string name="subreddit_selection_activity_label">Select a Subreddit</string>
    <string name="post_link_activity_label">Link Post</string>
    <string name="post_image_activity_label">Image Post</string>
    <string name="post_video_activity_label">Video Post</string>
    <string name="rules_activity_label">Rules</string>
    <string name="search_subreddits_activity_label">Subreddits</string>
    <string name="edit_post_activity_label">Edit Post</string>
    <string name="edit_comment_activity_label">Edit Comment</string>
    <string name="view_message_activity_label">Inbox</string>
    <string name="settings_activity_label">Settings</string>
    <string name="account_saved_thing_activity_label">Saved</string>
    <string name="create_multi_reddit_activity_label">Create Multireddit</string>
    <string name="subreddit_multiselection_activity_label">Select Subreddits</string>
    <string name="custom_theme_listing_activity_label">Custom Themes</string>
    <string name="customize_theme_activity_label">Customize Theme</string>
    <string name="customize_theme_activity_create_theme_label">Create Theme</string>
    <string name="theme_preview_activity_label">Theme Preview</string>
    <string name="edit_multi_reddit_activity_label">Edit Multireddit</string>
    <string name="selected_subeddits_activity_label">Selected Subreddits</string>
    <string name="report_activity_label">Report</string>
    <string name="view_imgur_media_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_imgur_media_activity_video_label">Video %1$d/%2$d</string>
    <string name="send_private_message_activity_label">Send PM</string>
    <string name="view_reddit_gallery_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_gif_label">Gif %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_video_label">Video %1$d/%2$d</string>
    <string name="submit_crosspost_activity_label">Crosspost</string>
    <string name="give_award_activity_label">Give Award</string>
    <string name="subreddit_filter_popular_and_all_activity_label">r/all and r/popular</string>
    <string name="customize_post_filter_activity_label">Customize Post Filter</string>
    <string name="filtered_posts_activity_subtitle">Filtered Posts</string>
    <string name="post_filter_preference_activity_label">Post Filter</string>
    <string name="search_users_result_activity_label">Users</string>
    <string name="nsfw">Sensitive</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_amoled_dark_title">Amoled Dark</string>
    <string name="settings_immersive_interface_title">Immersive Interface</string>
    <string name="settings_customize_tabs_in_main_page_title">Customize Tabs in Main Page</string>
    <string name="settings_enable_bottom_app_bar_title">Enable Bottom Navigation</string>
    <string name="settings_category_post_and_comment_title">Post and Comment</string>
    <string name="settings_vote_buttons_on_the_right_title">Vote Buttons on the Right</string>
    <string name="settings_volume_keys_navigate_comments_title">Use Volume Keys to Navigate Comments in Posts</string>
    <string name="settings_volume_keys_navigate_posts_title">Use Volume Keys to Navigate Posts</string>
    <string name="settings_category_comment_title">Comment</string>
    <string name="settings_show_top_level_comments_first_title">Show Top-level Comments First</string>
    <string name="settings_show_comment_divider_title">Show Comment Divider</string>
    <string name="settings_comment_toolbar_hide_on_click">Click to Show/Hide Comment Toolbar</string>
    <string name="settings_fully_collapse_comment_title">Fully Collapse Comment</string>
    <string name="settings_comment_toolbar_hidden">Comment Toolbar Hidden by Default</string>
    <string name="settings_show_absolute_number_of_votes_title">Show Absolute Number of Votes</string>
    <string name="settings_time_format_title">Time Format</string>
    <string name="settings_category_post_title">Post</string>
    <string name="settings_default_post_layout">Default Post Layout</string>
    <string name="settings_show_divider_in_compact_layout">Show Divider</string>
    <string name="settings_show_thumbnail_on_the_left_in_compact_layout">Show Thumbnail on the Left</string>
    <string name="settings_swap_tap_and_long_title">Swap Tap and Long Press in Comments</string>
    <string name="settings_swipe_to_go_back_title">Swipe Right to Go Back</string>
    <string name="settings_swipe_to_go_back_summary">Does Not Apply to All Pages</string>
    <string name="settings_swipe_vertically_to_go_back_from_media_title">Swipe Vertically to Go Back From Image and Gif</string>
    <string name="settings_lock_jump_to_next_top_level_comment_button_title">Lock Jump to Next Top-level Comment Button</string>
    <string name="settings_lock_bottom_app_bar_title">Lock Bottom Navigation Bar</string>
    <string name="settings_swipe_up_to_hide_jump_to_next_top_level_comment_button_title">Swipe Up to Hide Jump to Next Top-level Comment Button</string>
    <string name="settings_font_title">Font</string>
    <string name="settings_preview_font_title">Font Preview</string>
    <string name="settings_font_summary">Font</string>
    <string name="settings_title_font_summary">Title</string>
    <string name="settings_content_font_summary">Content</string>
    <string name="settings_font_family_title">Font Family</string>
    <string name="settings_title_font_family_title">Title Font Family</string>
    <string name="settings_content_font_family_title">Content Font Family</string>
    <string name="settings_font_size_title">Font Size</string>
    <string name="settings_title_font_size_title">Title Font Size</string>
    <string name="settings_content_font_size_title">Content Font Size</string>
    <string name="settings_acknowledgement_master_title">Acknowledgement</string>
    <string name="settings_credits_master_title">Credits</string>
    <string name="settings_credits_icon_foreground_title">Icon Foreground</string>
    <string name="settings_credits_icon_foreground_summary">Technology vector created by freepik - www.freepik.com</string>
    <string name="settings_credits_icon_background_title">Icon Background</string>
    <string name="settings_credits_icon_background_summary">Background vector created by freepik - www.freepik.com</string>
    <string name="settings_credits_error_image_title">Error Image</string>
    <string name="settings_credits_error_image_summary">Technology vector created by freepik - www.freepik.com</string>
    <string name="settings_credits_crosspost_icon_title">Crosspost Icon</string>
    <string name="settings_credits_crosspost_icon_summary">Icon made by Freepik from www.flaticon.com</string>
    <string name="settings_credits_thumbtack_icon_title">Thumbtack Icon</string>
    <string name="settings_credits_thumbtack_icon_summary">Icon made by Freepik from www.flaticon.com</string>
    <string name="settings_credits_material_icons_title">Material Icons</string>
    <string name="settings_open_source_title">Open Source</string>
    <string name="settings_open_source_summary">Star it on Github if you like this app</string>
    <string name="settings_rate_title">Rate on Google Play</string>
    <string name="settings_rate_summary">Give me a 5-star rating and I will be really happy</string>
    <string name="settings_email_title">Email</string>
    <string name="settings_email_summary">docilealligator.app@gmail.com</string>
    <string name="settings_reddit_account_title">Reddit Account</string>
    <string name="settings_reddit_account_summary">u/Hostilenemy</string>
    <string name="settings_subreddit_title">Subreddit</string>
    <string name="settings_subreddit_summary">r/Infinity_For_Reddit</string>
    <string name="settings_share_title">Share</string>
    <string name="settings_share_summary">Share this app to other people if you enjoy it</string>
    <string name="settings_version_title">Infinity For Reddit</string>
    <string name="settings_version_summary">Version %s</string>
    <string name="settings_category_customization_title">Customization</string>
    <string name="settings_customize_light_theme_title">Light Theme</string>
    <string name="settings_customize_dark_theme_title">Dark Theme</string>
    <string name="settings_customize_amoled_theme_title">Amoled Theme</string>
    <string name="settings_manage_themes_title">Manage Themes</string>
    <string name="restart_app_see_changes">Restart the app to see the changes</string>
    <string name="settings_image_download_location_title">Image Download Location</string>
    <string name="settings_gif_download_location_title">Gif Download Location</string>
    <string name="settings_video_download_location_title">Video Download Location</string>
    <string name="settings_separate_folder_for_each_subreddit">Separate Folder for Each Subreddit</string>
    <string name="settings_save_nsfw_media_in_different_folder_title">Save Sensitive Media in Different Location</string>
    <string name="settings_nsfw_download_location_title">Sensitive Download Location</string>
    <string name="settings_swipe_action_title">Swipe Action</string>
    <string name="settings_pull_to_refresh_title">Pull to Refresh</string>
    <string name="settings_customize_bottom_app_bar_title">Customize Bottom Navigation Bar</string>
    <string name="settings_translation_title">Translation</string>
    <string name="settings_translation_summary">Translate this app on POEditor. Thanks to all contributors.</string>
    <string name="settings_hide_subreddit_description_title">Hide Subreddit Description</string>
    <string name="settings_show_avatar_on_the_right">Show Avatar on the Right</string>
    <string name="settings_swipe_between_posts_title">Swipe Between Posts</string>
    <string name="settings_navigation_drawer_title">Navigation Drawer</string>
    <string name="settings_collapse_account_section_title">Collapse Account Section</string>
    <string name="settings_collapse_reddit_section_title">Collapse Reddit Section</string>
    <string name="settings_collapse_post_section_title">Collapse Post Section</string>
    <string name="settings_collapse_preferences_section_title">Collapse Preferences Section</string>
    <string name="settings_collapse_favorite_subreddits_section_title">Collapse Favorite Subreddits Section</string>
    <string name="settings_collapse_subscribed_subreddits_section_title">Collapse Subscribed Subreddits Section</string>
    <string name="settings_hide_favorite_subreddits_sections_title">Hide Favorite Subreddits Section</string>
    <string name="settings_hide_subscribed_subreddits_sections_title">Hide Subscribed Subreddits Section</string>
    <string name="settings_default_search_result_tab">Default Search Result Tab</string>
    <string name="settings_show_only_one_comment_level_indicator">Show Only One Comment Level Indicator</string>
    <string name="settings_post_details_title">Post Details</string>
    <string name="settings_use_bottom_toolbar_in_media_viewer_title">Use Bottom Toolbar in Media Viewer</string>
    <string name="settings_custom_font_family_title">Custom Font Family</string>
    <string name="settings_custom_title_font_family_title">Custom Title Font Family</string>
    <string name="settings_custom_content_font_family_title">Custom Content Font Family</string>
    <string name="settings_hide_fab_in_post_feed">Hide FAB in Post Feed</string>
</resources>