<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <Preference
    android:key="icon_foreground"
    android:summary="@string/settings_credits_icon_foreground_summary"
    app:title="@string/settings_credits_icon_foreground_title" />

  <Preference
    android:key="icon_background"
    android:summary="@string/settings_credits_icon_background_summary"
    app:title="@string/settings_credits_icon_background_title" />

  <Preference
    android:key="error_image"
    android:summary="@string/settings_credits_error_image_summary"
    app:title="@string/settings_credits_error_image_title" />

  <Preference
    android:key="gilded_icon"
    android:summary="@string/settings_credits_gilded_icon_summary"
    app:title="@string/settings_credits_gilded_icon_title" />

  <Preference
    android:key="crosspost_icon"
    android:summary="@string/settings_credits_crosspost_icon_summary"
    app:title="@string/settings_credits_crosspost_icon_title" />

  <Preference
    android:key="thumbtack_icon"
    android:summary="@string/settings_credits_thumbtack_icon_summary"
    app:title="@string/settings_credits_thumbtack_icon_title" />

  <Preference
    android:key="material_icons"
    app:title="@string/settings_credits_material_icons_title" />

</PreferenceScreen>