<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        app:defaultValue="true"
        app:key="swipe_to_go_back_from_post_detail"
        app:title="@string/settings_swipe_to_go_back_title"
        app:summary="@string/settings_swipe_to_go_back_summary" />

    <SwitchPreference
        app:defaultValue="true"
        app:key="swipe_vertically_to_go_back_from_media"
        app:title="@string/settings_swipe_vertically_to_go_back_from_media_title" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="lock_jump_to_next_top_level_comment_button"
        app:title="@string/settings_lock_jump_to_next_top_level_comment_button_title" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="swipe_up_to_hide_jump_to_next_top_level_comments_button"
        app:title="@string/settings_swipe_up_to_hide_jump_to_next_top_level_comment_button_title"
        app:isPreferenceVisible="false" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="lock_bottom_app_bar"
        app:title="@string/settings_lock_bottom_app_bar_title"
        app:isPreferenceVisible="false" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="volume_keys_navigate_comments"
        app:title="@string/settings_volume_keys_navigate_comments_title" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="volume_keys_navigate_posts"
        app:title="@string/settings_volume_keys_navigate_posts_title" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="swap_tap_and_long_in_comments"
        app:title="@string/settings_swap_tap_and_long_title" />

    <SwitchPreference
        app:defaultValue="true"
        app:key="pull_to_refresh"
        app:title="@string/settings_pull_to_refresh_title" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="swipe_between_posts"
        app:title="@string/settings_swipe_between_posts_title" />

    <Preference
        app:title="@string/settings_swipe_action_title"
        app:fragment="ml.docilealligator.infinityforreddit.settings.SwipeActionPreferenceFragment" />

</PreferenceScreen>