<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:title="@string/settings_font_title"
        app:icon="@drawable/ic_font_size_24dp"
        app:fragment="ml.docilealligator.infinityforreddit.Settings.FontPreferenceFragment" />

    <Preference
        app:title="@string/settings_immersive_interface_title"
        app:fragment="ml.docilealligator.infinityforreddit.Settings.ImmersiveInterfacePreferenceFragment" />

    <Preference
        app:title="@string/settings_customize_tabs_in_main_page_title"
        app:summary="@string/settings_customize_tabs_in_main_page_summary"
        app:fragment="ml.docilealligator.infinityforreddit.Settings.CustomizeMainPageTabsFragment" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="bottom_app_bar"
        app:title="@string/settings_enable_bottom_app_bar_title"
        app:summary="@string/settings_enable_bottom_app_bar_summary" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="vote_buttons_on_the_right"
        app:title="@string/settings_vote_buttons_on_the_right_title" />

    <Preference
        app:title="@string/settings_time_format_title"
        app:fragment="ml.docilealligator.infinityforreddit.Settings.TimeFormatPreferenceFragment" />

    <ListPreference
        app:defaultValue="0"
        android:entries="@array/settings_default_post_layout"
        app:entryValues="@array/settings_default_post_layout_values"
        app:key="default_post_layout"
        app:title="@string/settings_default_post_layout"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        app:defaultValue="true"
        app:key="show_divider_in_compact_layout"
        app:title="@string/settings_show_divider_in_compact_layout" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="show_thumbnail_on_the_left_in_compact_layout"
        app:title="@string/settings_show_thumbnail_on_the_left_in_compact_layout" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="show_top_level_comments_first"
        app:title="@string/settings_show_top_level_comments_first_title" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="show_comment_divider"
        app:title="@string/settings_show_comment_divider_title" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="comment_toolbar_hidden"
        app:title="@string/settings_comment_toolbar_hidden" />

    <SwitchPreference
        app:defaultValue="true"
        app:key="comment_toolbar_hide_on_click"
        app:title="@string/settings_comment_toolbar_hide_on_click" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="fully_collapse_comment"
        android:title="@string/settings_fully_collapse_comment_title" />

    <SwitchPreference
        app:defaultValue="true"
        app:key="show_absolute_number_of_votes"
        app:title="@string/settings_show_absolute_number_of_votes_title" />

</PreferenceScreen>