<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ml.ino6962.postinfinityforreddit.customviews.CustomFontPreference
        app:key="image_download_location"
        app:title="@string/settings_image_download_location_title" />

    <ml.ino6962.postinfinityforreddit.customviews.CustomFontPreference
        app:key="gif_download_location"
        app:title="@string/settings_gif_download_location_title" />

    <ml.ino6962.postinfinityforreddit.customviews.CustomFontPreference
        app:key="video_download_location"
        app:title="@string/settings_video_download_location_title" />

    <ml.ino6962.postinfinityforreddit.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="separate_folder_for_each_subreddit"
        app:title="@string/settings_separate_folder_for_each_subreddit" />

    <ml.ino6962.postinfinityforreddit.customviews.CustomFontPreferenceCategory
        app:title="@string/nsfw" />

    <ml.ino6962.postinfinityforreddit.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="save_nsfw_media_in_different_folder"
        app:title="@string/settings_save_nsfw_media_in_different_folder_title" />

    <ml.ino6962.postinfinityforreddit.customviews.CustomFontPreference
        app:key="nsfw_download_location"
        app:title="@string/settings_nsfw_download_location_title" />
</PreferenceScreen>