<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ml.docilealligator.infinityforreddit.customviews.CustomFontPreference
        app:icon="@drawable/ic_info_preference_24dp"
        app:summary="@string/restart_app_see_changes"
        app:enabled="false" />

    <ml.docilealligator.infinityforreddit.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="show_avatar_on_the_right"
        app:title="@string/settings_show_avatar_on_the_right" />

    <ml.docilealligator.infinityforreddit.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="collapse_account_section"
        app:title="@string/settings_collapse_account_section_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="collapse_reddit_section"
        app:title="@string/settings_collapse_reddit_section_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="collapse_post_section"
        app:title="@string/settings_collapse_post_section_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="collapse_preferences_section"
        app:title="@string/settings_collapse_preferences_section_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="collapse_favorite_subreddits_section"
        app:title="@string/settings_collapse_favorite_subreddits_section_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="collapse_subscribed_subreddits_section"
        app:title="@string/settings_collapse_subscribed_subreddits_section_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_favorite_subreddits_sections"
        app:title="@string/settings_hide_favorite_subreddits_sections_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_subscribed_subreddits_sections"
        app:title="@string/settings_hide_subscribed_subreddits_sections_title" />

</PreferenceScreen>