<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <ListPreference
        app:defaultValue="2"
        app:entryValues="@array/settings_theme_values"
        app:key="theme"
        app:icon="@drawable/ic_outline_color_lens_24dp"
        app:title="@string/settings_theme_title"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="amoled_dark"
        app:title="@string/settings_amoled_dark_title" />

    <PreferenceCategory
        app:title="@string/settings_category_customization_title" />

    <Preference
        app:key="customize_light_theme"
        app:icon="@drawable/ic_light_theme_preference_24dp"
        app:title="@string/settings_customize_light_theme_title" />

    <Preference
        app:key="customize_dark_theme"
        app:icon="@drawable/ic_dark_theme_preference_24dp"
        app:title="@string/settings_customize_dark_theme_title" />

    <Preference
        app:key="customize_amoled_theme"
        app:icon="@drawable/ic_dark_theme_preference_24dp"
        app:title="@string/settings_customize_amoled_theme_title" />

    <Preference
        app:key="manage_themes"
        app:icon="@drawable/ic_edit_24dp"
        app:title="@string/settings_manage_themes_title" />

    <Preference
        app:summary="@string/settings_custom_theme_cannot_apply_to_settings_page_title"
        app:enabled="false" />

</PreferenceScreen>